hide list of sounds on mobile, fix datetime in Safari/mobile/webview

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,3 +66,9 @@
 	margin:0px;
 	/*line-height:0px;*/
 }
+
+@media only screen and (max-device-width: 480px) {
+	#searchresults {
+		display: none;
+	}
+}
